
option java_outer_classname="GetLoggingInfoCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message GetLoggingInfoCommand 
{
	optional int64 requestId = 1;
}